--- a/dom/locales/en-US/chrome/security/security.properties
+++ b/dom/locales/en-US/chrome/security/security.properties
@@ -16,3 +16,4 @@ InsecureFormActionPasswordsPresent=Password fields present in a form with an ins
 InsecurePasswordsPresentOnIframe=Password fields present on an insecure (http://) iframe. This is a security risk that allows user login credentials to be stolen.
 LoadingMixedActiveContent=Loading mixed (insecure) active content on a secure page "%1$S"
 LoadingMixedDisplayContent=Loading mixed (insecure) display content on a secure page "%1$S"
+LoadingInsecurePassword=Arktik Fox allowed a form with an insecure password on a non-sensitive page "%1$S"
