--- a/dom/locales/en-US/chrome/security/security.properties
+++ b/dom/locales/en-US/chrome/security/security.properties
@@ -1,7 +1,7 @@
 # Mixed Content Blocker
 # LOCALIZATION NOTE: "%1$S" is the URI of the blocked mixed content resource
-BlockMixedDisplayContent = Blocked loading mixed display content "%1$S"
-BlockMixedActiveContent = Blocked loading mixed active content "%1$S"
+BlockMixedDisplayContent = ArktikFox blocked loading mixed display content "%1$S"
+BlockMixedActiveContent = ArktikFox blocked loading mixed active content "%1$S"
 
 # CSP
 ReportOnlyCSPIgnored=Report-only CSP policy will be ignored because there are other non-report-only CSP policies applied.
@@ -11,9 +11,14 @@ OldCSPHeaderDeprecated=The X-Content-Security-Policy and X-Content-Security-Repo
 BothCSPHeadersPresent=This site specified both an X-Content-Security-Policy/Report-Only header and a Content-Security-Policy/Report-Only header. The X-Content-Security-Policy/Report-Only header(s) will be ignored.
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
 InvalidSTSHeaders=The site specified an invalid Strict-Transport-Security header.
-InsecurePasswordsPresentOnPage=Password fields present on an insecure (http://) page. This is a security risk that allows user login credentials to be stolen.
-InsecureFormActionPasswordsPresent=Password fields present in a form with an insecure (http://) form action. This is a security risk that allows user login credentials to be stolen.
-InsecurePasswordsPresentOnIframe=Password fields present on an insecure (http://) iframe. This is a security risk that allows user login credentials to be stolen.
-LoadingMixedActiveContent=Loading mixed (insecure) active content on a secure page "%1$S"
-LoadingMixedDisplayContent=Loading mixed (insecure) display content on a secure page "%1$S"
+InsecurePasswordsPresentOnPage=ArktikFox: Password fields present on an insecure (http://) page. This is a security risk that allows user login credentials to be stolen.
+InsecureFormActionPasswordsPresent=ArktikFox: Password fields present in a form with an insecure (http://) form action. This is a security risk that allows user login credentials to be stolen.
+InsecurePasswordsPresentOnIframe=ArktikFox: Password fields present on an insecure (http://) iframe. This is a security risk that allows user login credentials to be stolen.
+LoadingMixedActiveContent=ArktikFox: Loading mixed (insecure) active content on a secure page "%1$S"
+LoadingMixedDisplayContent=ArktikFox: Loading mixed (insecure) display content on a secure page "%1$S"
 LoadingInsecurePassword=Arktik Fox allowed a form with an insecure password on a non-sensitive page "%1$S"
+LoadingInsecurePasswordForm=Arktik Fox allowed a form with an insecure password(form) on a non-sensitive page "%1$S"
+LoadingInsecurePasswordIFrame=Arktik Fox allowed a form with an insecure password(iframe) on a non-sensitive page "%1$S"
+ArktikFoxBlockThirdParty=Arktik Fox blocked third party resource "%1$S"
+ArktikFoxNotSensitiveScript=Arktik Fox allowed mixed active content on a non-security sensitive page "%1$S"
+ArktikFoxNotSensitiveDisplay=Arktik Fox allowed mixed display content on a non-security sensitive page "%1$S"
