--- a/dom/locales/en-US/chrome/security/security.properties
+++ b/dom/locales/en-US/chrome/security/security.properties
@@ -20,5 +20,5 @@ LoadingInsecurePassword=Arktik Fox allowed a form with an insecure password on a
 LoadingInsecurePasswordForm=Arktik Fox allowed a form with an insecure password(form) on a non-sensitive page "%1$S"
 LoadingInsecurePasswordIFrame=Arktik Fox allowed a form with an insecure password(iframe) on a non-sensitive page "%1$S"
 ArktikFoxBlockThirdParty=Arktik Fox blocked third party resource "%1$S"
-ArktikFoxNotSensitiveScript=Arktik Fox allowed mixed active content on a non-security sensitive page "%1$S"
-ArktikFoxNotSensitiveDisplay=Arktik Fox allowed mixed display content on a non-security sensitive page "%1$S"
+ArktikFoxNotSensitiveScript=Arktik Fox skipped testing active content on a non-security sensitive page "%1$S"
+ArktikFoxNotSensitiveDisplay=Arktik Fox skipped testing display content on a non-security sensitive page "%1$S"
